lib/tests/ui/fn_must_be_async.stderr
error: trait methods have to be async
 --> $DIR/fn_must_be_async.rs:3:5
  |
3 |     fn subtract(&self, subtrahend: i64, minuend: i64) -> i64;
  |     ^^
